--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.5.9
+@version 2.6.0
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -138,7 +138,7 @@
 
 /*GNU General Public License v3.0.*/
 
-/*2.5.9*/
+/*2.6.0*/
 
 	/*Main color variables*/
 	:root
@@ -1567,7 +1567,7 @@
 	}
 
 	/*"Best" of YouTube icons in sidepane*/
-	.ytd-guide-section-renderer img.yt-img-shadow
+	.style-scope.ytd-guide-entry-renderer.no-transition
 	{
 		filter: grayscale(100%);
 	}
