--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.6.1
+@version 2.6.2
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -138,7 +138,7 @@
 
 /*GNU General Public License v3.0.*/
 
-/*2.6.1*/
+/*2.6.2*/
 
 	/*Main color variables*/
 	:root
@@ -558,7 +558,7 @@
 		--yt-material-searchbox-inactive: var(--main-background) !important;
 		--yt-material-searchbox-active: var(--hover-background) !important;
 		--yt-swatch-icon-color: var(--dimer-text) !important;
-		
+
 		--yt-sidebar-background: var(--second-background) !important;
 
 		/*Placeholder crap*/
@@ -1132,7 +1132,7 @@
 	{
 		opacity: 1 !important;
 	}
-	
+
 	/*Search for channel videos*/
  	.unfocused-line.paper-input-container,.focused-line.paper-input-container
 	{
@@ -1618,5 +1618,13 @@
 	{
 		fill: var(--main-color) !important;
 	}
+  /* Fix for placeholders/skeletons */
+  ytd-masthead.shell{
+      background-color: var(--main-background);
+  }
 
+  ytd-masthead.shell [class*='skeleton'], #watch-page-skeleton [class*='skeleton'], #related-skeleton [class*='skeleton'], #meta-skeleton [class*='skeleton'], #masthead-skeleton-icons [class*='skeleton'], #info-skeleton [class*='skeleton'], [id*='skeleton'] [class*='skeleton'], [id*='skeleton'], .shelf-videos, .skeleton-bg-color{
+      background-color: var(--hover-background) !important;
+      border-color: var(--hover-background) !important;
+  }
 }
