--- a/YouTubeDeepDarkClassic.user.css
+++ b/YouTubeDeepDarkClassic.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Classic
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.3.1
+@version 2.3.2
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkClassic.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme) 
 @author RaitaroH
@@ -137,7 +137,7 @@
 
 /*GNU General Public License v3.0.*/
 
-/*2.3.1*/
+/*2.3.2*/
 
 	/*Main color variables*/
 	:root
@@ -1212,11 +1212,11 @@
 	{
 		border-color: var(--hover-background) !important;
 	}
-
-  /* fix for video title color conflict when enabled on Material layout */
-  a#video-title{
-    color: var(--main-text) !important;
-  }
+	
+	/* fix for video title color conflict when enabled on Material layout */
+	a#video-title{
+		color: var(--main-text) !important;
+	}
 
 	/* Ad info popup */
 	.ytp-ad-info-dialog-form{
@@ -1224,5 +1224,10 @@
 	}
 	.ytp-ad-info-dialog-title{
 		color: var(--main-text);
+	}
+	/*Footer links*/
+	#footer-links-primary a, #footer a
+	{
+		color: var(--dimer-text) !important;
 	}
 }
